--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">SimonIlic-pset2</string>
-    <string name="welcome_string">This is a mad libs app.\nInput some words when prompted and we will have a laugh</string>
+    <string name="welcome_string">
+        This is a mad libs game. The goal is to create a story together. Please follow my
+        instructions in the next screen. Simply fill in the requested words and
+        hopefully a funny story will be the result!
+    </string>
+    <string name="word_count">%1$d word(s) to go!</string>
+    <string name="inputText_hint">%1$s</string>
+    <string name="extra_hint">Type in a %1$s</string>
+    <string name="story">%1$s</string>
+    <string name="restart_button">Make another story</string>
+    <string name="begin_button_text">Begin</string>
 </resources>
