--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="story">%1$s</string>
     <string name="restart_button">Make another story</string>
     <string name="begin_button_text">Begin</string>
+    <string name="instructions">Fill in the requested words below to complete the Story!</string>
+    <string name="present_story">Here\'s our Story:</string>
+    <string name="image_description">mad libs logo</string>
+    <string name="ok_button">OK</string>
 </resources>
